syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.smartcheckin";
option java_outer_classname = "SmartCheckinProto";

service SmartCheckinService {
  rpc checkIn(CheckInRequest) returns (CheckInResponse);
}

message CheckInRequest {
  string guestName = 1;
  string guestID = 2;
  string paymentDetails = 3;
}

message CheckInResponse {
  bool success = 1;
  string message = 2;
}
